--- a/public_html/server/composer.json
+++ b/public_html/server/composer.json
@@ -23,19 +23,20 @@
     "yiisoft/yii2": "~2.0.14",
     "yiisoft/yii2-bootstrap4": "~2.0.0",
     "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-    "yiisoft/yii2-faker": "^2.0"
+    "yiisoft/yii2-faker": "^2.0",
+    "codeception/specify": "*",
+    "codeception/verify": "*"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
     "yiisoft/yii2-debug": "~2.1.0",
     "yiisoft/yii2-gii": "~2.2.0",
     "codeception/codeception": "^4.0",
-    "codeception/verify": "~0.5.0 || ~1.1.0",
-    "codeception/specify": "~0.4.6",
     "symfony/browser-kit": ">=2.7 <=4.2.4",
     "codeception/module-filesystem": "^1.0.0",
     "codeception/module-yii2": "^1.0.0",
-    "codeception/module-asserts": "^1.0.0"
+    "codeception/module-asserts": "^1.0.0",
+    "codeception/module-rest": "^1.4"
   },
   "config": {
     "process-timeout": 1800,
@@ -73,5 +74,6 @@
       "type": "composer",
       "url": "https://asset-packagist.org"
     }
-  ]
+  ],
+  "test-api": "php vendor/bin/codecept run api"
 }
